# primordial-agentstore

./: .env.example  .gitignore  BUILDING_AGENTS.md  CHANGELOG.md  Dockerfile.backend  Host-Integration-Skill.md  PLAN.md  Primordial-AgentStore-Skill.md  README.md  Selling.md  docker-compose.yml  open-source-strategy.md  pyproject.toml  security.md
.claude/: settings.local.json
docs/: README.md  agent-delegation.md  agent-manifest.md  api-setup.md  building-agents.md  custom-providers.md  daemon.md  developing-agents.md  getting-started.md  primordial-protocol.md  publishing.md  security.md
docs/developers/: building-agents.md  publishing.md
docs/users/: background-service.md  getting-started.md
examples/hello-agent/: agent.yaml  requirements.txt
examples/hello-agent/prompts/: system.md
examples/hello-agent/src/: agent.py
examples/hello-agent/tests/: test_agent.py
examples/openclaw-agent/: agent.yaml
examples/steve-agent/: agent.yaml  requirements.txt
examples/steve-agent/src/: agent.py
sdk/: pyproject.toml
sdk/src/agentstore_sdk/: __init__.py  agent.py  io.py  tools.py
skills/: deepagents_skill.md  zep_skill.md
skills/primordial/: SKILL-codex.md  SKILL.md
validator/: VALIDATOR_SYSTEM_DESIGN.md
webResearch 2.0/: agent.yaml  requirements.txt
webResearch 2.0/src/: agent.py
