[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primordial-monorepo"
version = "0.2.0"
description = "Primordial AgentStore - The digital soup from which agents emerge"
requires-python = ">=3.11"

[tool.hatch.envs.default]
dependencies = []

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["packages/client/tests"]
asyncio_mode = "auto"
