[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentstore-sdk"
version = "0.1.0"
description = "SDK for building Agent Store agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentstore_sdk"]
